; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/l_net/extr_l_net_berkeley.c_WINS_Connect.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/l_net/extr_l_net_berkeley.c_WINS_Connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_s = type { i32 }
%struct.sockaddr = type { i32 }

@SOCKET_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"WINS_Connect: %s\0A\00", align 1
@FIONBIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WINS_Connect(i32 %0, %struct.sockaddr_s* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr_s*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.sockaddr_s* %1, %struct.sockaddr_s** %5, align 8
  store i32 -1, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.sockaddr_s*, %struct.sockaddr_s** %5, align 8
  %10 = bitcast %struct.sockaddr_s* %9 to %struct.sockaddr*
  %11 = call i32 @connect(i32 %8, %struct.sockaddr* %10, i32 4)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @SOCKET_ERROR, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = call i32 (...) @WSAGetLastError()
  %17 = call i32 @WINS_ErrorMessage(i32 %16)
  %18 = call i32 @WinPrint(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32 -1, i32* %3, align 4
  br label %29

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @FIONBIO, align 4
  %22 = call i32 @ioctlsocket(i32 %20, i32 %21, i32* %7)
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = call i32 (...) @WSAGetLastError()
  %26 = call i32 @WINS_ErrorMessage(i32 %25)
  %27 = call i32 @WinPrint(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %26)
  store i32 -1, i32* %3, align 4
  br label %29

28:                                               ; preds = %19
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %24, %15
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @WinPrint(i8*, i32) #1

declare dso_local i32 @WINS_ErrorMessage(i32) #1

declare dso_local i32 @WSAGetLastError(...) #1

declare dso_local i32 @ioctlsocket(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
